--- a/index.html
+++ b/index.html
@@ -9,10 +9,57 @@
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <img
+        src="./assets/bowtie-cat.png"
+        alt="Profile image of cat wearing a bow tie."
+      />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>HTML is made up of elements that work together to provide content and the basic formwork for all pages on the web.</li>
+          <li>Content Elemnts: Text, Image, Header, List</li>
+          <li>Element types used to divide and describe a page: Meta-related elements, Content Division elements, Semantic elements.</li>
+          <li>The head element contains information about the webpage to help the browser render the page correctly. Not visible to users.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The footer element usually contains the author, copyright, contact, sitemap, and navigation.</li>
+          <li>HTML Attribute: defines additional information about an element. HTML attributes are alwyays defined in the beginning element, never the closing element.</li>
+          <li>The "style" element defines the CSS styles associated with a website.</li>
+          <li>The "title" element defines the title for a webpage.</li>
+          <li>The "base" element defines the base URL for a webpage.</li>
+          <li>The "link" element connects an external resource to the HTML document.</li>
+          <li>The "meta" element defines metadata such as the character set, description, keywords, author, and viewport.</li>
+          <li>The "script" element embeds client-side scripts in the HTML document.</li>
+          <li>The "charset" elements sets our character encoding.</li>
+          <li>The "http-equiv" element sets an HTTP header for content.</li>
+          <li>The "viewport" element sets the default view for our webpage.</li>
+          <li>Header elements range from "h1" to "h6" and should be used in order. The "h1" header should only be used once on each page.</li>
+          <li>Other common Body elements include: "p" for paragraph, "ul" for an unordered, or bulletpointed list, "ol" for an ordered list, and "li" for list items.</li>
+          <li>Image elements, "img", are used to display images and contain various attributes such as "src" defining the location of the image.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>I don't know anything about CSS yet</li>
+        </ul>   
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>        </ul>   
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>   
+      </section>
     </main>
 
     <footer>
