--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -43,7 +44,20 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>I don't know anything about CSS yet</li>
+          <li>Cascaiding Style Sheets (CSS) defines the colors, aesthetics, visual layout, and organization.</li>
+          <li>Three ways to style a webpage: inline CSS, internal CSS style sheet, external CSS style sheet.</li>
+          <li>Inline CSS - code added to the HTML file, applying to a specific HTML tag to style a particular page element only.</li>
+          <li>Example of Inline CSS: Using the "style" attribute to change the color of a single "h1" heading - ie. "h1 style="color:red;""</li>
+          <li>Internal Style Sheet: embeds an entire stylesheet directly in the HTML file using a "style" element in the "head" element.</li>
+          <li>Internal Style Sheet: The rules only apply to that page, and you can configure CSS classes and IDs, which are used to identify elements,
+             to style multiple elements in the page code. A single change to the CSS rule will apply to all tagged page elements.</li>
+          <li>External Style Sheet: The most common way to style a page. Preferred in most cases because it allows developers to keep all their CSS
+             rules in a separate file, which makes design changes easier.</li>
+          <li>External Style Sheet: Link the CSS file to the HTML file using the "link" element placed in the HTML's "head".</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>Class Attributes: Assign styling to specific elements by using Class Attributes. To designate a selector as a class selector use a ".".</li>
+          </ul>
         </ul>   
       </section>
    
