Added functions to .js file and list items to Javascript study guide section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,18 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Conditional statements, like IF statements, can be used to interrupt control flow.</li>
+          <li>Variables that store more than one value are called arrays.</li>
+          <li>Arrays can store values of varying data types.</li>
+          <li>Array values are tracked by indexing using brackets and starting with the value 0.</li>
+          <li>A FOR loop uses the predictable pattern of indices to perform a task on all the items in an array by allowing a single code block to be executed over and over.</li>
+          <li>FOR loops contains 3 important statements: starting point for the loop, condition, iteration mechanism.</li>
+          <li>A Function is a set of instructions that tells the computer how to perform a certain task that must be "called" in order to execute.</li>
+          <li>First you define the Function by using the FUNCTION keyword followed by the unique name of the Function and parentheses, then with executable code 
+            within curly brackets.</li>
+          <li>To Call the function, simply type the name of the function where you want the function executed with your code.</li>
         </ul>   
       </section>
     </main>
